Workflow styling and ie6 fixes - Actions in workflow & task list now working in ie6 (always displayed) & ie7 (visisble on mouse hover) - Cancel workflow has an icon and was aligned to the left
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@22582 7033f55c-6c29-4ad8-afba-765cb616e738

Former-commit-id: a9889ea6aeef77b1826d8800727ad650262a494c

--- a/root/projects/slingshot/source/web/css/ie6.css
+++ b/root/projects/slingshot/source/web/css/ie6.css
@@ -664,3 +664,11 @@ table .yui-dt-empty
 {
    visibility: visible;
 }
+
+/* Lists */
+
+.task-list .tasks td.yui-dt-last .yui-dt-liner,
+.workflow-list .workflows td.yui-dt-last .yui-dt-liner
+{
+   visibility: visible;
+}
